[package]
name = "portier_client"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest_cookie_store = "0.8.0"
log = "0.4.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
env_logger = "0.11.3"
