[package]
name = "portier_client"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "0.12.5", optional = true ,features =["json"] }
reqwest_cookie_store = { version = "0.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
env_logger = "0.11.3"

[features]
default = ["cookies"]
cookies = [
    "reqwest/cookies",
    "reqwest_cookie_store",
]
memory = []
